# crosswdk

./: .clang-format  FindCrossWDK.cmake  README.md  main.cpp  support.cpp
examples/: CMakeLists.txt  main.cpp  memory.cpp
examples/basic/: CMakeLists.txt  main.cpp  memory.cpp
examples/libcxx/: CMakeLists.txt  main.cpp
include/wdk/: utils.hpp  wdk.hpp
include/wdk/arch/: arch.hpp  control_regs.hpp  descriptors.hpp  memory.hpp  msrs.hpp  segments.hpp
include/wdk/cpp/: support.h
include/wdk/intrin/: amd.hpp  intel.hpp  intrin.hpp
include/wdk/windows/: declarations.hpp  types.hpp  windows.hpp
libc/include/: support.h  wchar.h
libc/src/: support.cpp
